# sym-tasker

./: CMakeLists.txt  README.md  asciiArtedName.cpp  fileChangerForOutputTable.cpp  finalFileChangerForOutputTable.cpp  header.h  main.cpp  version.cpp
.github/workflows/: c-cpp.yml
functions/: DataForTable.cpp  FileChangerForOutputTable.cpp  History.cpp  OutputTable.cpp  TagDelete.cpp  TagEdit.cpp  TagInsert.cpp  TagWise.cpp  TaskDelete.cpp  TaskEdit.cpp  asciiArtedName.cpp  attachmentfolderpathstring.cpp  dotSymFileChecker.cpp  dotsymfilestring.cpp  filechangerforoutputtable.cpp  filecopy.cpp  finalFileChangerForOutputTable.cpp  help.cpp  initializer.cpp  input.h  insert.cpp  insertaskdata.cpp  isExpired.cpp  isImportant.cpp  isUrgent.cpp  motivation.cpp  outputTable.cpp  randomiser.cpp  readtaskdata.cpp  showAttachment.cpp  showExpired.cpp  showTable.cpp  version.cpp
